<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Доступность автодозвона -->
    <CheckBoxPreference
        android:key="enable_redial"
        android:title="@string/enable_redial"
        android:summary="@string/service_on"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:dependency="enable_redial"
        android:key="attempts"
        android:title="@string/attempts_amount"
        android:defaultValue="4"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <CheckBoxPreference
        android:dependency="enable_redial"
        android:key="dynamic"
        android:title="@string/dynamic"
        android:defaultValue="true" />

    <ListPreference
        android:dependency="enable_redial"
        android:key="redial_duration"
        android:title="@string/redial_duration"
        android:defaultValue="30"
        android:entries="@array/redial_duration_titles"
        android:entryValues="@array/redial_duration_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

</PreferenceScreen>
